# AoC

./: .editorconfig  .gitignore  Cargo.toml
2022-rust/: Cargo.toml
2022-rust/src/: cc.rs  cli.rs  main.rs  math.rs  point.rs  terrain.rs
2022-rust/src/day01/: mod.rs
2022-rust/src/day02/: mod.rs  rps.rs
2022-rust/src/day03/: mod.rs
2022-rust/src/day04/: mod.rs
2022-rust/src/day05/: mod.rs
2022-rust/src/day07/: fs.rs  mod.rs  state.rs
2022-rust/src/day09/: mod.rs  rope.rs
2022-rust/src/day11/: mod.rs
2022-rust/src/day12/: map.rs  mod.rs
2022-rust/src/day13/: mod.rs  packet.rs
2022-rust/src/day15/: mod.rs  multi_range.rs
2022-rust/src/day16/: mod.rs  valve.rs
2022-rust/src/day17/: mod.rs
2022-rust/src/day18/: mod.rs
2022-rust/src/day21/: mod.rs
2022-rust/src/day24/: mod.rs
2022-rust/src/days/: mod.rs
2023-rust/: Cargo.toml
2023-rust/src/: cli.rs  line_stream.rs  main.rs  math.rs
2023-rust/src/day01/: mod.rs
2023-rust/src/day03/: mod.rs  schematic.rs
2023-rust/src/day06/: mod.rs
2023-rust/src/day07/: mod.rs
2023-rust/src/day09/: mod.rs
2023-rust/src/day10/: mod.rs
2023-rust/src/day11/: mod.rs
2023-rust/src/day13/: mod.rs
2023-rust/src/day14/: mod.rs
2023-rust/src/day17/: mod.rs
2023-rust/src/day18/: mod.rs
2023-rust/src/day19/: mod.rs
2023-rust/src/day20/: circuit.rs  mod.rs
2023-rust/src/day21/: mod.rs
2023-rust/src/days/: mod.rs
2024-rust/: Cargo.toml
2024-rust/src/: cli.rs  main.rs
2024-rust/src/day01/: mod.rs
2024-rust/src/day02/: mod.rs
2024-rust/src/day03/: mod.rs
2024-rust/src/day04/: mod.rs
2024-rust/src/day05/: mod.rs
2024-rust/src/day06/: mod.rs
2024-rust/src/day07/: mod.rs
2024-rust/src/day08/: mod.rs
2024-rust/src/day09/: mod.rs
2024-rust/src/day10/: mod.rs
2024-rust/src/day11/: mod.rs
2024-rust/src/day12/: mod.rs
2024-rust/src/day13/: mod.rs
2024-rust/src/day14/: mod.rs
2025-rust/: Cargo.toml  shell.nix
2025-rust/src/: cli.rs  main.rs
(+100 files in other folders)
