[package]
name = "aoc22-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-common-rs = { path = "../common-rust" }
clap = { version = "4.0.29", features = ["derive"] }
either = "1.8.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
nom = "7.1.1"
num-traits = "0.2.15"
