[package]
name = "aoc25-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-common-rs = { path = "../common-rust" }
clap = { version = "4.5.53", features = ["derive"] }
itertools = "0.14.0"
nom = "8.0.0"
